# myDFS

./: README.md  specs.md
myDFS_unix/: makefile  mydfs_client.config  mydfs_server.config
myDFS_unix/myDFSClient/: client.c  client.h
myDFS_unix/myDFSCommons/: configuration_manager.c  mydfs_commons.c  mydfs_commons.h  poll_helper.c  poll_helper.h  read_utilities.c  read_utilities.h  sem_utilities.c  sem_utilities.h
myDFS_unix/myDFSServer/: mydfs_server.config  server.c
myDFS_unix/test/: main.c  mydfs_client.config
myDFS_win32/: CMakeLists.txt  makefile  mydfs_client.config  mydfs_server.config
myDFS_win32/myDFSClient/: client.c  client.h
myDFS_win32/myDFSCommons/: configuration_manager.c  configuration_manager.h  mydfs_commons.c  mydfs_commons.h  poll_helper.c  poll_helper.h  read_utilities.c  read_utilities.h  sem_utilities.c  sem_utilities.h
myDFS_win32/myDFSServer/: server.c
myDFS_win32/test/: main.c
